--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -7,7 +7,7 @@ trigger:
   - main  # Run pipeline when changes are pushed to the 'main' branch
  
 pool:
-  vmImage: 'ubuntu-latest'  # Use a Linux VM to run the pipeline
+  name: 'selfpool'  
  
 steps:
   - task: CopyFiles@2
