--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -7,7 +7,7 @@ trigger:
   - main  # Run pipeline when changes are pushed to the 'main' branch
  
 pool:
-  name: 'selfpool'  
+  name: 'newpool'  
  
 steps:
   - task: CopyFiles@2
